Add ability to choose only one operator

--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
       <div class="ops-select">
         <h2>Operators</h2>
         <div class="ops-grid">
-          <div class="card op-card selected locked" aria-pressed="true">
+          <div id="opAndCard" class="card op-card selected" aria-pressed="true">
             <div class="op-big and">∧</div>
             <div class="name">AND</div>
-            <div class="badge">Required</div>
+            <div class="badge">Optional</div>
           </div>
-          <div class="card op-card selected locked" aria-pressed="true">
+          <div id="opOrCard" class="card op-card selected" aria-pressed="true">
             <div class="op-big or">∨</div>
             <div class="name">OR</div>
-            <div class="badge">Required</div>
+            <div class="badge">Optional</div>
           </div>
-          <div class="card op-card selected locked" aria-pressed="true">
+          <div id="opNotCard" class="card op-card selected" aria-pressed="true">
             <div class="op-big not">¬</div>
             <div class="name">NOT</div>
-            <div class="badge">Required</div>
+            <div class="badge">Optional</div>
           </div>
           <div id="opImpCard" class="card op-card" hidden aria-pressed="false">
             <div class="op-big imp">→</div>
